Adding config file for debug and book.db.js
